force-app/main/default/objects/Creditsafe_Company_Additional_Info_DE__c/Creditsafe_Company_Additional_Info_DE__c.object-meta.xml
<CustomObject>
    <description>A CreditsafeCompanyAdditionalInformationDEAdditionalInformationV2</description>
    <label>Creditsafe Company Additional Info DE</label>
    <nameField>
        <displayFormat>AI-{000000}</displayFormat>
        <label>Creditsafe Company Additional Info DE Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Creditsafe Company Additional Info DE</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>