force-app/main/default/objects/Creditsafe_Company_Additional_Info_DE__c/fields/Fax_Number__c.field-meta.xml
<CustomField>
    <fullName>Fax_Number__c</fullName>
    <description>The Fax number of the business.</description>
    <label>Fax Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>