force-app/main/default/objects/Creditsafe_Company_Additional_Info_DE__c/fields/Negative_Rating__c.field-meta.xml
<CustomField>
    <fullName>Negative_Rating__c</fullName>
    <description>The negative credit rating if it exists for a company.</description>
    <label>Negative Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>