force-app/main/default/objects/Creditsafe_Company_Additional_Info_DE__c/fields/Previous_Rating_Min_Value__c.field-meta.xml
<CustomField>
    <fullName>Previous_Rating_Min_Value__c</fullName>
    <description>Min value</description>
    <label>Previous Rating Min Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>